Fix navigation styles on mobile

--- a/src/less/themes.less
+++ b/src/less/themes.less
@@ -36,8 +36,9 @@
 		.hamburger-btn span {
 			background: #fff;
 		}
-		&.solid-bg {
+		&.solid-bg, &.dropdown-open {
 			background: #fff;
+			box-shadow: 0px -1px 12px 0px rgba(0,0,0,0.8);
 			a {
 				color: #666;
 				text-shadow: none;
@@ -45,6 +46,9 @@
 					color: #333;
 					text-shadow: none;
 				}
+			}
+			.hamburger-btn span {
+				background: #666;
 			}
 		}
 	}
